Fixed header image and headline on small viewports

--- a/css/app.css
+++ b/css/app.css
@@ -4,6 +4,15 @@
 	text-align: right;
 }
 
+.name-desc h1 {
+	margin-top: 1em;
+	margin-left: 1.5em;
+}
+
+.name-desc h5 {
+	margin-left: 2em;
+}
+
 hr {
 	border-color: #2d3c49;
 }
@@ -21,7 +30,7 @@ hr {
 
 .header-img {
 	max-width: 123px;
-	max-height: auto;
+	height: auto;
 }
 
 .equal {
